@@ -104,6 +104,8 @@ v1.2.0  --> 1.2.x :
 		- Added png and m2ts to default allowed_types
 		- Added proof and cover? to default subdir_list
 		- Added 2010, 2011 and 2012 to allowed_years and removed 2005 and 2006
+		- Added bug #434 - upper/lower case and title cookies, for zst files
+		  See themes/default.zst for explanations.
 
 v1.1.0a --> 1.2.0 :
 		- added option to make accept_script run prior to complete_script.
